# meetup-python-grenoble.github.io

./: .gitignore  Pipfile  README.md  hooks.py  jupyter-lite.json  mkdocs.yml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: config.yml  submission.yml
.github/workflows/: ci-cd.yml
branding/: 2022-11-24_cover.xcf  2022-12-15_cover.xcf  2023-03-28_cover.xcf  2023-04-27_cover.xcf  2023-05-25_cover.xcf  2023-06-29_cover.xcf  2023-11-23_cover.xcf  generic-cover.xcf
content/: branding.md  community.md  index.md  lab.md  zen.md
content/events/: index.md
content/events/2022-09-29/: index.md  slides.html
content/events/2022-10-25/: index.md  slides.html  slides.ipynb
content/events/2022-11-24/: index.md  slides.html
content/events/2022-12-15/: index.md  jupyterlite.html  jupyterlite.ipynb
content/events/2023-01-26/: index.md  notes.md  slides.html  slides.ipynb
content/events/2023-02-28/: index.md
content/events/2023-03-28/: index.md
content/events/2023-04-27/: index.md  sqlite_udf.html  sqlite_udf.ipynb
content/events/2023-05-25/: index.md
content/events/2023-06-29/: index.md
content/events/2023-07-20/: index.md  slides.html
content/events/2023-08-22/: index.md  slides.html  slides.ipynb
content/events/2023-08-24/: index.md
content/events/2023-09-28/: index.md
content/events/2023-10-24/: index.md
content/events/2023-11-23/: functional-data-pipelines.html  (+2 more)
content/static/: Meetup_Python_Grenoble.ics
jupyterlite/repl/: jupyter-lite.json
meetups/2022-09-29/: index.md  slides.ipynb
overrides/: event.html  event_list.html
(+33 files in other folders)
